--- a/krish544/index.html
+++ b/krish544/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Krish Bharal</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <p>Hello I am Krish Bharal and if you're reading this you know I am on the run!</p>
+
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
