--- a/krish544/index.html
+++ b/krish544/index.html
@@ -7,10 +7,8 @@
     <title>Krish Bharal</title>
   </head>
   <body>
-    <div id="app">
-      <p>Hello I am Krish Bharal and if you're reading this you know I am on the run!</p>
-
-    </div>
+    <div id="app"></div>
+    <div id="test"></div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
