--- a/krish544/index.html
+++ b/krish544/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Krish Bharal</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="bg-neutral-200 text-slate-900 dark:bg-slate-900 dark:text-neutral-200">
+    <div id="root" ></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
